refactor(docs): docs 도메인 전체 리팩토링